--- a/public/HomePage/homepage.html
+++ b/public/HomePage/homepage.html
@@ -27,7 +27,7 @@
                         <a href="http://localhost:7000/homepage/" class="navbar__links">Home</a>
                     </li>
                      <li class="navbar__btn">
-                        <button class="logout-btn">Logout</button>
+                        <button id="logout" class="logout-btn">Logout</button>
                     </li>
                 </ul>
             </div>
