--- a/public/ResetPassword/ResetPassword.html
+++ b/public/ResetPassword/ResetPassword.html
@@ -7,13 +7,13 @@
         initial-scale=1.0" />
         <title>About | The Pawfect Match</title>
         <link rel="stylesheet" href="ResetPassword/ResetPassword-style.css">
-        <link rel = "icon" href ="images/paw_logo.png" 
-        type = "image/x-icon">
+        <!-- <link rel = "icon" href ="images/paw_logo.png" 
+        type = "image/x-icon"> -->
     </head>
     <body>
         <nav class="navbar">
             <div class="navbar__container">
-                <a href="/" id="navbar__logo"><img src="ResetPassword/images/paw_logo.png">The Pawfect Match</a>
+                <a href="/" id="navbar__logo"> The Pawfect Match</a>
                 <div class="navbar__toggle" id="mobile-menu">
                     <span class="bar"></span>
                     <span class="bar"></span>
@@ -40,11 +40,11 @@
             <div class="password-reset-container">
                 <h1>Forgot/Reset Password</h1>
                 <p>If you've forgotten your password, don't worry. We can help you reset it. Please enter your email address below, and we'll send you instructions on how to reset your password.</p>
-
-                <form class="password-reset-form" >
+                
+                <form class="password-reset-form" action="" method="post">
                     <label for="email">Email Address</label>
                     <input type="email" id="email" name="email" required>
-                    <button id="submit" type="submit" class="button">Reset Password</button>
+                    <button type="submit" class="button">Reset Password</button>
                 </form>
             </div>
         </section>
@@ -53,23 +53,4 @@
             <a href="/HomePage/homein.html" id="footer__logo"><i class="fasfa-gem"></i><br>Back to Home</a>
         </footer>
     </body>
-    <script>
-         document.getElementById("submit").addEventListener("click", function() {
-            var email = document.getElementById('email').value;
-            fetch('/forgot', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json',
-                },
-                body: JSON.stringify(email)
-            })
-            .then(response => response.json())
-            .then(data => {
-                alert(data); // Display the response from the server in an alert
-            })
-            .catch(error => {
-                console.error("An error occurred:", error);
-            });
-        });
-    </script>
     </html>
